@@ -6,8 +6,11 @@ Note that ``RB_ID=#`` correspond to associated messages in commits.
 
 Next Version
 
-Changes in Runtime Behavior:
+API Changes:
+  * util-core: `Activity`, `BoundedStack`, `RingBuffer` and `Var` migrated
+    off of deprecated `ClassManifest` to `ClassTag`. ``RB_ID=720455``
 
+Changes in Runtime Behavior:
   * util-core: `Promise.forwardInterruptsTo(other)` is a no-op if the
                 other future is fulfilled. ``RB_ID=714420``
 
